--- a/public/css/faculty_portal.css
+++ b/public/css/faculty_portal.css
@@ -17,7 +17,19 @@ body::-webkit-scrollbar {
 
 h3 {
   margin: 0;
-  color: var(--secondary);
+  color: var(--sfTileBorder);
+}
+
+h2 {
+  color: var(--sfTileBorder);
+}
+
+p{
+  color: var(--sfTileBorder);
+}
+
+a{
+  color: var(--sfTileBorder);
 }
 
 .MainBody {
@@ -246,15 +258,15 @@ input[type="text"] {
   padding: 12px 16px;
   margin: 8px 0px;
   box-sizing: border-box;
-  background-color: var(--inactive);
+  background-color: var(--sfBackground);
   border: 2px solid var(--sfTileBorder);
-  border-radius: 1em;
+  border-radius: 1.25em;
   width: 400px;
 }
 
 input[type="submit"] {
   padding: 10px 20px;
-  border-radius: 2em;
+  border-radius: 1em;
   border: none;
   background-color: var(--sfTileBorder);
 }
