--- a/views/change_password.ejs
+++ b/views/change_password.ejs
@@ -36,14 +36,14 @@
       background-color: #ebdbb2;
     }
 
-    input[type="text"] {
+    input[type="password"] {
       font-family: "Montserrat";
       font-size: 20px;
       padding: 12px 16px;
       margin: 8px 0;
       box-sizing: border-box;
       background-color: #32302f;
-      border: 1px solid #ebdbb2;
+      border: 1px solid var(--sfTileBorder);
       color: #ebdbb2;
       border-radius: 20px;
     }
@@ -63,7 +63,7 @@
       border-radius: 15px;
       background-color: #282828;
       overflow: auto;
-      padding-bottom: 40px;
+      padding-bottom: 30px;
     }
 
     #photo {
@@ -90,7 +90,7 @@
 
     td {
       min-width: 150px;
-      padding: 0px 20px 0px 20px;
+      padding: 10px;
     }
 
     input {
@@ -118,7 +118,6 @@
       padding: 10px;
     }
   </style>
-
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -127,14 +126,7 @@
 
   <body>
     <div id="dashboard">
-      <div id="image" style="float: left;">
-        <button
-          style="border-radius: 10px; width: 150px;"
-          onclick="window.location.href = '/';"
-        >
-          Go Back
-        </button>
-      </div>
+      <h2 style="align-self: center;">CHANGE PASSWORD</h2>
       <form action="<%=req%>" method="POST">
         <table border="0" cellpadding="3">
           <tr>
@@ -168,8 +160,9 @@
             </td>
           </tr>
           <tr>
-            <td>
-              <button style="border-radius: 10px; width: 150px;" type="submit">
+            <td></td>
+            <td style="display: flex; justify-content: flex-end;">
+              <button style="border-radius: 10px; width: 150px; margin-right: 5px;" type="submit">
                 submit
               </button>
             </td>
