--- a/views/change_password.ejs
+++ b/views/change_password.ejs
@@ -126,6 +126,14 @@
 
   <body>
     <div id="dashboard">
+      <div id="image" style="float: left;">
+        <button
+          style="border-radius: 10px; width: 150px;"
+          onclick="window.location.href = '<%=back%>';"
+        >
+          Go Back
+        </button>
+      </div>
       <h2 style="align-self: center;">CHANGE PASSWORD</h2>
       <form action="<%=req%>" method="POST">
         <table border="0" cellpadding="3">
@@ -162,7 +170,10 @@
           <tr>
             <td></td>
             <td style="display: flex; justify-content: flex-end;">
-              <button style="border-radius: 10px; width: 150px; margin-right: 5px;" type="submit">
+              <button
+                style="border-radius: 10px; width: 150px; margin-right: 5px;"
+                type="submit"
+              >
                 submit
               </button>
             </td>
